--- a/package.json
+++ b/package.json
@@ -26,22 +26,33 @@
     "@aws-sdk/client-sts": "^3.x",
     "@aws-sdk/credential-providers": "^3.x",
     "aws-sdk": "^2.x",
+    "bcryptjs": "^2.4.x",
     "cors": "^2.8.5",
     "dotenv": "^16.x",
     "express": "^4.x",
     "express-rate-limit": "^7.x",
     "helmet": "^7.x",
     "joi": "^17.x",
+    "jsonwebtoken": "^9.x",
+    "mongoose": "^8.x",
     "morgan": "^1.x",
+    "passport": "^0.7.x",
+    "passport-jwt": "^4.x",
+    "passport-local": "^1.x",
     "winston": "^3.x",
     "zod": "^3.x"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.x",
     "@types/cors": "^2.8.x",
     "@types/express": "^4.x",
     "@types/jest": "^29.x",
+    "@types/jsonwebtoken": "^9.x",
     "@types/morgan": "^1.x",
     "@types/node": "^20.x",
+    "@types/passport": "^1.x",
+    "@types/passport-jwt": "^3.x",
+    "@types/passport-local": "^1.x",
     "@typescript-eslint/eslint-plugin": "^6.x",
     "@typescript-eslint/parser": "^6.x",
     "eslint": "^8.x",
