Update environment variables template

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,23 @@
 PORT=3000
 NODE_ENV=development
 
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/mcp-server
+MONGODB_URI_TEST=mongodb://localhost:27017/mcp-server-test
+
+# JWT Configuration
+JWT_SECRET=your-jwt-secret-key
+JWT_EXPIRES_IN=24h
+
 # AWS Configuration
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_SESSION_TOKEN=
 AWS_DEFAULT_REGION=us-east-1
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
+RATE_LIMIT_MAX_REQUESTS=100  # requests per window
+
+# Security
+CORS_ORIGIN=http://localhost:3000
